--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/tmp": "^0.2.6",
     "diff-match-patch": "^1.0.5",
     "fastest-levenshtein": "^1.0.16",
-    "isomorphic-git": "^1.29.0",
-    "memfs": "^4.15.3",
-    "string-similarity": "^4.0.4"
+    "simple-git": "^3.27.0",
+    "string-similarity": "^4.0.4",
+    "tmp": "^0.2.3"
   }
 }
